<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear"
        android:background="#160f33"
        android:padding="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icons8_back_50__2_"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Crear cuenta"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:shadowColor="@color/black"
        android:text="@string/qu_jate_aqu"
        android:layout_below="@id/linear"
        android:textSize="34sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/titulo"
        android:src="@drawable/logoquejate"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/correo"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:padding="6sp"
        android:layout_below="@+id/imageView" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:padding="6sp"
        android:layout_below="@+id/etCorreo" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_style"
        android:ems="10"
        android:hint="@string/confirmar_contrase_a"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:padding="6sp"
        android:layout_below="@+id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="118dp"
        android:layout_height="46dp"
        android:background="@drawable/custom_button"
        android:text="@string/crear_cuenta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/etConfirmPassword"
        />
</RelativeLayout>